gem install without docs

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -7,7 +7,7 @@ BOSH Command Line Interface (CLI) is used to interact with the Director.
 To install BOSH CLI with the MicroBOSH plugin:
 
 <pre class="terminal">
-gem install bosh_cli bosh_cli_plugin_micro
+gem install bosh_cli bosh_cli_plugin_micro --no-ri --no-rdoc
 </pre>
 
 <p class='note'><strong>Note</strong>: Installing the BOSH CLI requires Ruby 1.9.3, 2.0.x, or 2.1.x.</p>
@@ -86,5 +86,5 @@ sudo yum install gcc ruby ruby-devel mysql-devel postgresql-devel postgresql-lib
 Run this command to install AWS bootstrap plugin:
 
 <pre class="terminal">
-gem install bosh_cli_plugin_aws
+gem install bosh_cli_plugin_aws --no-ri --no-rdoc
 </pre>
