added basic vcloud cpi configuration

--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -59,6 +59,7 @@ See [networks](networks.html) for more details.
 - [See AWS CPI network cloud properties](aws-cpi.html#networks)
 - [See OpenStack CPI network cloud properties](openstack-cpi.html#networks)
 - [See vSphere CPI network cloud properties](vsphere-cpi.html#networks)
+- [See vCloud CPI network cloud properties](vcloud-cpi.html#networks)
 
 ---
 ## <a id='resource-pools'></a>Resource Pools Block
@@ -93,6 +94,7 @@ resource_pools:
 - [See AWS CPI resource pool cloud properties](aws-cpi.html#resource-pools)
 - [See OpenStack CPI resource pool cloud properties](openstack-cpi.html#resource-pools)
 - [See vSphere CPI resource pool cloud properties](vsphere-cpi.html#resource-pools)
+- [See vCloud CPI resource pool cloud properties](vcloud-cpi.html#resource-pools)
 
 ---
 ## <a id='disk-pools'></a>Disk Pools Block
@@ -118,6 +120,7 @@ disk_pools:
 - [See AWS CPI disk pool cloud properties](aws-cpi.html#disk-pools)
 - [See OpenStack CPI disk pool cloud properties](openstack-cpi.html#disk-pools)
 - [See vSphere CPI disk pool cloud properties](vsphere-cpi.html#disk-pools)
+- [See vCloud CPI disk pool cloud properties](vcloud-cpi.html#disk-pools)
 
 ---
 ## <a id='compilation'></a>Compilation Block
