--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -57,7 +57,7 @@ title: Index
     * [AWS](aws-cpi.html)
     * [OpenStack](openstack-cpi.html)
     * [vSphere](vsphere-cpi.html)
-    * vCloud
+    * [vCloud](vcloud-cpi.html)
 
 ### <a id="hm"></a> Health Management of VMs and Processes
 
