--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -338,7 +338,7 @@ network specified in <code>net_id</code>.</p>
 OpenStack describes VMs in terms of flavors.
 You specify the flavor in the `instance_type` attribute of the
 `cloud_properties` sub-block of the `resources` block.
-Choose a flavor that has some ephemeral disk as described in [validate your OpenStack](../../deploying/openstack/validate_openstack.html).
+Choose a flavor that has some ephemeral disk.
 
 ~~~yaml
 resources:
