link to cli page from the index

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,7 +13,7 @@ title: Index
  * [Terminology](terminology.html)
 
 ---
-## <a id="install"></a> Installing MicroBOSH
+## <a id="install"></a> Installing BOSH
 
  * [BOSH components](bosh-components.html)
  * [Bootstrapping an environment / What is MicroBOSH?](bootstrap.html)
@@ -26,6 +26,7 @@ title: Index
     * On vCloud
     * [On Local machine using BOSH Lite](bosh-lite.html)
  * BOSH micro deploy step-by-step
+ * [Installing BOSH CLI](bosh-cli.html)
 
 ### Advanced BOSH configuration
 
@@ -49,6 +50,7 @@ title: Index
 
 ### Detailed Deployment Configuration
 
+ * Deployment Jobs
  * Resource Pools
     * [VM anti-affinity](vm-anti-affinity.html)
  * [Networks](networks.html)
