--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -30,7 +30,8 @@ title: Index
 
 ### Advanced BOSH configuration
 
- * [Connecting BOSH or MicroBOSH to an External Postgres Database](connect-postgres-hadb.html)
+ * [User management on the Director](director-users.html)
+ * [Connecting the Director to an External Postgres Database](connect-postgres-hadb.html)
  * Deploying multi-VM BOSH
     * Difference between Microbosh, BOSH, and multi-VM BOSH
 
@@ -47,6 +48,7 @@ title: Index
     * Updating deployment to deal with security vulnerabilities
  * [Deploying step-by-step](deploying-step-by-step.html)
  * [CLI Commands](sysadmin-commands.html)
+ * [Director tasks](director-tasks.html)
 
 ### Detailed Deployment Configuration
 
