--- a/uploading-releases.html.md.erb
+++ b/uploading-releases.html.md.erb
@@ -8,43 +8,55 @@ As described earlier, each deployment references one or many releases on the Dir
 
 ## <a id='find'></a> Finding Releases
 
-Releases are distributed in two ways: Through a Git repository or as a release tarball. Here are few popular releases found on GitHub:
+Releases are distributed in two ways: as a release tarball or through a source code repository. [Releases section of bosh.io](//bosh.io/releases) provides a good list of available releases and their tarballs.
 
-- [cf-release](https://github.com/cloudfoundry/cf-release)
-- [cf-mysql-release](https://github.com/cloudfoundry/cf-mysql-release)
-- [redis-release](https://github.com/cloudfoundry-community/redis-boshrelease)
+Here are few popular releases:
 
-Note that all the repositories have a folder called `releases/` that contains release manifest YAML files. These files have all the required information on how to assemble specific version of a release (provided that the release maintainers produce and commit that version to the repository). You can use the YAML files to either directly upload a release or to create a release tarball.
-
-To build a release tarball from a release manifest YAML file:
-
-<pre class="terminal">
-cd ~/workspace/redis-boshrelease
-bosh create release releases/redis/redis-12.yml
-</pre>
+- [cf-release](//bosh.io/releases/github.com/cloudfoundry/cf-release) which provides CloudFoundry
+- [cf-mysql-release](//bosh.io/releases/github.com/cloudfoundry/cf-mysql-release) which provides highly-available MySQL
+- [cf-rabbitmq-release](//bosh.io/releases/github.com/pivotal-cf/cf-rabbitmq-release) which provides RabbitMQ
 
 ---
 ## <a id='upload'></a> Uploading to the Director
 
-Assuming that the CLI is already targeted at the Director, the CLI provides a single command to upload a release. 
+Assuming that the CLI is already targeted at the Director, the CLI provides a single command to upload a release.
 
-If you have a release tarball:
+- If you have a URL to a release tarball (for example URL provided by bosh.io):
 
-<pre class="terminal">
-bosh upload release ~/Downloads/redis-12.tgz --skip-if-exists
-</pre>
+	<pre class="terminal">
+	$ bosh upload release https://bosh.io/d/github.com/cloudfoundry/cf-release --skip-if-exists
+	</pre>
 
-If you cloned a Git repository:
+	Alternatively, if you have a release tarball on your local machine:
 
-<pre class="terminal">
-cd ~/workspace/redis-boshrelease
-bosh upload release releases/redis/redis-12.yml --skip-if-exists
-</pre>
+	<pre class="terminal">
+	$ bosh upload release ~/Downloads/redis-12.tgz --skip-if-exists
+	</pre>
+
+- If you cloned a Git repository:
+
+    Note that all release repositories have a `releases/` folder that contains release YAML files. These files have all the required information on how to assemble specific version of a release (provided that the release maintainers produce and commit that version to the repository). You can use the YAML files to either directly upload a release or to create a release tarball locally and then upload it.
+
+    <pre class="terminal">
+	$ cd ~/workspace/redis-boshrelease
+
+	$ bosh upload release releases/redis/redis-12.yml --skip-if-exists
+	</pre>
+
+	Alternatively, to build a release tarball locally from a release YAML file:
+
+	<pre class="terminal">
+	$ cd ~/workspace/redis-boshrelease
+
+	$ bosh create release releases/redis/redis-12.yml --with-tarball
+
+	$ bosh upload release releases/redis/redis-12.tgz
+	</pre>
 
 Once the command succeeds, you can view all uploaded releases in the Director:
 
 <pre class="terminal">
-bosh releases
+$ bosh releases
 
 +--------+----------+-------------+
 | Name   | Versions | Commit Hash |
