--- a/director-users.html.md.erb
+++ b/director-users.html.md.erb
@@ -4,7 +4,7 @@ title: User management on the Director
 
 The Director provides a very simple user management system for authentication of operators and internal services (for example, the Health Monitor). The system does not currently allow to assign user roles/permissions.
 
-<p class="note">Note: We have future plans to integrate the Director with the UAA to provide more sophisticated authentication and authorization.</p>
+<p class="note"><strong>Note</strong>: We have future plans to integrate the Director with the UAA to provide more sophisticated authentication and authorization.</p>
 
 Once installed, the Director comes without any configured users by default. When there are no configured users you can use `admin` / `admin` credentials to login into the Director.
 
@@ -42,4 +42,4 @@ The Director records initiating user for each [director task](director-tasks.htm
 ---
 ## <a id="hm"></a> Health Monitor Authentication
 
-The Health Monitor is configured to use custom user to query/submit requests to the Director. Since by default the Director does not come with any users, the Health Monitor is not able to successfully communicate with the Director. See [Automatic repair with Resurrector](resurrector.html) topic for more details.
+The Health Monitor is configured to use custom user to query/submit requests to the Director. Since by default the Director does not come with any users, the Health Monitor is not able to successfully communicate with the Director. See the [Automatic repair with Resurrector](resurrector.html) topic for more details.
