--- a/uploading-releases.html.md.erb
+++ b/uploading-releases.html.md.erb
@@ -8,20 +8,20 @@ As described earlier, each deployment references one or many releases on the Dir
 
 ## <a id='find'></a> Finding Releases
 
-Releases are distributed in two ways: as a release tarball or through a source code repository. [Releases section of bosh.io](//bosh.io/releases) provides a good list of available releases and their tarballs.
+Releases are distributed in two ways: as a release tarball or through a source code repository. The [Releases section of bosh.io](//bosh.io/releases) provides a good list of available releases and their tarballs.
 
-Here are few popular releases:
+Here are a few popular releases:
 
-- [cf-release](//bosh.io/releases/github.com/cloudfoundry/cf-release) which provides CloudFoundry
-- [cf-mysql-release](//bosh.io/releases/github.com/cloudfoundry/cf-mysql-release) which provides highly-available MySQL
-- [cf-rabbitmq-release](//bosh.io/releases/github.com/pivotal-cf/cf-rabbitmq-release) which provides RabbitMQ
+- [cf-release](//bosh.io/releases/github.com/cloudfoundry/cf-release) provides CloudFoundry
+- [cf-mysql-release](//bosh.io/releases/github.com/cloudfoundry/cf-mysql-release) provides highly-available MySQL
+- [cf-rabbitmq-release](//bosh.io/releases/github.com/pivotal-cf/cf-rabbitmq-release) provides RabbitMQ
 
 ---
 ## <a id='upload'></a> Uploading to the Director
 
 Assuming that the CLI is already targeted at the Director, the CLI provides a single command to upload a release.
 
-- If you have a URL to a release tarball (for example URL provided by bosh.io):
+- If you have a URL to a release tarball (for example a URL provided by bosh.io):
 
 	<pre class="terminal">
 	$ bosh upload release https://bosh.io/d/github.com/cloudfoundry/cf-release --skip-if-exists
@@ -35,7 +35,7 @@ Assuming that the CLI is already targeted at the Director, the CLI provides a si
 
 - If you cloned a Git repository:
 
-    Note that all release repositories have a `releases/` folder that contains release YAML files. These files have all the required information on how to assemble specific version of a release (provided that the release maintainers produce and commit that version to the repository). You can use the YAML files to either directly upload a release or to create a release tarball locally and then upload it.
+    Note that all release repositories have a `releases/` folder that contains release YAML files. These files have all the required information on how to assemble a specific version of a release (provided that the release maintainers produce and commit that version to the repository). You can use the YAML files to either directly upload a release, or to create a release tarball locally and then upload it.
 
     <pre class="terminal">
 	$ cd ~/workspace/redis-boshrelease
