edits to deploy-microbosh-to-aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -11,7 +11,7 @@ The MicroBOSH deployment manifest is a YAML file that defines the components and
 1. Create a deployment directory to store your manifest.
 
     <pre class='terminal'>
-    $ mkdir ~/my-micro-deployment
+    $ mkdir ~/micro-deployment
     </pre>
 
 1. Create a deployment manifest YAML file.
@@ -364,4 +364,4 @@ If you cannot determine the cause of any error, run `bosh micro delete` to remov
 
 [Back to Table of Contents](index.html#install)
 
-Next: [Configuring AWS for Cloud Foundry](configure_aws_cf.html)
+Next: [Configuring AWS for Cloud Foundry](../../deploying/ec2/configure_aws_cf.html)
