edits to deploy-microbosh-to-aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -2,7 +2,7 @@
 title: Deploying MicroBOSH to AWS
 ---
 
-This topic explains how to deploy MicroBOSH to Amazon Web Services (AWS).
+This topic describes how to deploy MicroBOSH to Amazon Web Services (AWS).
 
 ## <a id="create-manifest"></a>Step 1: Create a Deployment Manifest
 
@@ -61,8 +61,6 @@ apply_spec:
 
 ---
 ##<a id="prepare-aws"></a>Step 2: Prepare an AWS Account ##
-
-If you do not have an AWS account, [create one](http://goo.gl/MaAybK).
 
 To configure your AWS account for MicroBOSH:
 
@@ -362,6 +360,6 @@ If you cannot determine the cause of any error, run `bosh micro delete` to remov
 
 ---
 
-[Back to Table of Contents](index.html#install)
+Back to [Deploying to AWS](aws_steps.html)
 
 Next: [Configuring AWS for Cloud Foundry](../../deploying/ec2/configure_aws_cf.html)
