edits link in  deploy-microbosh-to-aws.html

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -360,6 +360,6 @@ If you cannot determine the cause of any error, run `bosh micro delete` to remov
 
 ---
 
-Back to [Deploying to AWS](aws_steps.html)
+Back to [Deploying to AWS](../../deploying/ec2/aws_steps.html)
 
 Next: [Configuring AWS for Cloud Foundry](../../deploying/ec2/configure_aws_cf.html)
